# Domain/Entities/User.cs
@@ -10,6 +10,9 @@ namespace Domain.Entities
         public string Email { get; set; } = string.Empty;
         public string Password { get; set; } = string.Empty;
         public string? Bio { get; set; }
+        public string? Address { get; set; }
+        public string? WhatsAppNumber { get; set; }
+        public string? CvUrl { get; set; }
         public string? Phone { get; set; }
         public string? ProfilePicture { get; set; }
         public string? CoverPhoto { get; set; }
